--- a/projectDS/.classpath
+++ b/projectDS/.classpath
@@ -6,5 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="C:/Users/wujos/eclipse-workspace/HW11/Web/WebContent/WEB-INF/lib/jsoup-1.11.3.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
